--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,16 +59,10 @@ permissions:
   contents: read
 
 env:
-  ARM_CLIENT_ID: "8f131bc9-c5b2-4bd4-b8ba-7b70dc4ee9f7"
-  ARM_CLIENT_SECRET: ".9V8Q~NnUtELoWl88JsKBBToHUK.QCgRLVeDAbj3"
-  ARM_SUBSCRIPTION_ID: "926f046f-9150-4c5b-8002-334a2bc99822"
-  ARM_TENANT_ID: "4a06d40c-e447-42be-baef-dd0421ed10bd"
-
-# env:
-#   ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-#   ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-#   ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#   ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
 jobs:
   terraform:
@@ -98,8 +92,8 @@ jobs:
       - name: Login via Azure CLI
         uses: azure/login@v1
         with:
-          # creds: ${{ secrets.AZURE_CREDENTIALS }}
-          creds:  '{ "clientId": "8f131bc9-c5b2-4bd4-b8ba-7b70dc4ee9f7", "clientSecret": ".9V8Q~NnUtELoWl88JsKBBToHUK.QCgRLVeDAbj3", "subscriptionId": "926f046f-9150-4c5b-8002-334a2bc99822", "tenantId": "4a06d40c-e447-42be-baef-dd0421ed10bd", "activeDirectoryEndpointUrl": "https://login.microsoftonline.com", "resourceManagerEndpointUrl": "https://management.azure.com/","activeDirectoryGraphResourceId": "https://graph.windows.net/","sqlManagementEndpointUrl": "https://management.core.windows.net:8443/", "galleryEndpointUrl": "https://gallery.azure.com/", "managementEndpointUrl": "https://management.core.windows.net/"}'
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+       
 
 
       # Apply Terraform changes
