--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,7 +89,7 @@ jobs:
         run: terraform init
 
       # Login to Azure via Azure CLI
-      - name: Login via Azure CLI
+#       - name: Login via Azure CLI
       - uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
