--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,13 +89,20 @@ jobs:
         run: terraform init
 
       # Login to Azure via Azure CLI
-#       - name: Login via Azure CLI
-      - uses: azure/login@v1
+      - name: Az CLI login
+        uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-    
-      - run: |
-          az webapp list --query "[?state=='Running']"
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+      - name: Azure CLI script
+        uses: azure/CLI@v1
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
+            az group list
        
 
 
