--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -148,22 +148,14 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: Az CLI login
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-  
+      - name: Azure CLI login
+        run: az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID
+
       - name: Azure CLI script
-        uses: azure/CLI@v1
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az account show
-            az group list
+        run: |
+          az account set --subscription $ARM_SUBSCRIPTION_ID
+          az account show
+          az group list
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-
-
