--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -114,7 +114,11 @@ name: Terraform
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
+
+permissions:
+  contents: read
+
 
 env:
   ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
@@ -122,40 +126,38 @@ env:
   ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
-permissions:
-  contents: read
-  id-token: write
-
 jobs:
   terraform:
     name: "Terraform"
     runs-on: ubuntu-latest
     environment: production
 
-    steps:
-      - name: Set Terraform Environment Variables
-        run: |
-          echo "export ARM_CLIENT_ID=$ARM_CLIENT_ID" >> $GITHUB_ENV
-          echo "export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET" >> $GITHUB_ENV
-          echo "export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID" >> $GITHUB_ENV
+    # Use the Bash shell regardless of the runner's operating system
+    defaults:
+      run:
+        shell: bash
 
+    steps:
+      # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v3
 
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         run: terraform init
 
-      - name: Azure CLI login
-        run: az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID
+      # Login to Azure via Azure CLI
+      - name: Login via Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Azure CLI script
-        run: |
-          az account set --subscription $ARM_SUBSCRIPTION_ID
-          az account show
-          az group list
 
+
+      # Apply Terraform changes
       - name: Terraform Apply
         run: terraform apply -auto-approve
