--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,29 +19,39 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
+    # Use the Bash shell regardless of the runner's operating system
     defaults:
       run:
         shell: bash
 
     steps:
+      # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-
+      # Install Azure CLI
       - name: Install Azure CLI
         run: |
           curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-          az extension add -n azure-cli-iot-ext
 
+      # Install the azure-cli-iot-ext extension
+      - name: Install azure-cli-iot-ext extension
+        run: az extension add -n azure-cli-iot-ext
+
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         run: terraform init
 
-      - name: Az CLI login
+      # Login to Azure via Azure CLI
+      - name: Login via Azure CLI
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      # Apply Terraform changes
       - name: Terraform Apply
         run: terraform apply -auto-approve
