--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,10 +46,14 @@ jobs:
       - name: Login via Azure CLI
         uses: azure/login@v1
         with: # Set Azure credentials secret as an input
-          credentials: ${{ secrets.AZURE_CREDENTIALS }}
-        env: # Or as an environment variable
-          credentials: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id : ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id : ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+          
+        env: # Or as an environment variable
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       # Apply Terraform changes
       - name: Terraform Apply
         run: terraform apply -auto-approve
