--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,13 +47,14 @@ jobs:
         uses: azure/login@v1
         with: # Set Azure credentials secret as an input
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id : ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id : ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#           client-id: ${{ secrets.AZURE_CLIENT_ID }}
+#           tenant-id : ${{ secrets.AZURE_TENANT_ID }}
+#           subscription-id : ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-          
-        env: # Or as an environment variable
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+#           env: # Or as an environment variable
+#           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+
       # Apply Terraform changes
       - name: Terraform Apply
         run: terraform apply -auto-approve
