--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -101,10 +101,10 @@ jobs:
       run: terraform init
 
     # Login to Azure via Azure CLI
-    - name: Login via Azure CLI
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+#     - name: Login via Azure CLI
+#       uses: azure/login@v1
+#       with:
+#         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Apply
