--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -104,7 +104,9 @@ jobs:
     - name: Login via Azure CLI
       uses: azure/login@v1
       with:
-        creds:"clientId": "b4d03f63-f7e5-4ec6-a7ac-1e07095babff",
+        creds: |
+              {
+                "clientId": "b4d03f63-f7e5-4ec6-a7ac-1e07095babff",
                 "clientSecret": "qvt8Q~dQZ8P-bZOebGj0pneome8FXT6TQ855kb-Q",
                 "subscriptionId": "926f046f-9150-4c5b-8002-334a2bc99822",
                 "tenantId": "4a06d40c-e447-42be-baef-dd0421ed10bd",
@@ -114,7 +116,8 @@ jobs:
                 "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
                 "galleryEndpointUrl": "https://gallery.azure.com/",
                 "managementEndpointUrl": "https://management.core.windows.net/"
-                 
+              }
+
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Apply
