--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,8 +69,8 @@ permissions:
   contents: read
 
 env:
-      ARM_CLIENT_ID: "b4d03f63-f7e5-4ec6-a7ac-1e07095babff"
-      ARM_CLIENT_SECRET: "qvt8Q~dQZ8P-bZOebGj0pneome8FXT6TQ855kb-Q"
+      ARM_CLIENT_ID: "94e1b6db-6ba5-4366-be9e-33a4204adb51"
+      ARM_CLIENT_SECRET: "-ui8Q~NofbWrcXKUBMi2ZcQYAfllhrG4x8CHObPE"
       ARM_SUBSCRIPTION_ID: "926f046f-9150-4c5b-8002-334a2bc99822"
       ARM_TENANT_ID: "4a06d40c-e447-42be-baef-dd0421ed10bd"
 
@@ -105,18 +105,18 @@ jobs:
       uses: azure/login@v1
       with:
         creds: |
-              {
-                "clientId": "b4d03f63-f7e5-4ec6-a7ac-1e07095babff",
-                "clientSecret": "qvt8Q~dQZ8P-bZOebGj0pneome8FXT6TQ855kb-Q",
-                "subscriptionId": "926f046f-9150-4c5b-8002-334a2bc99822",
-                "tenantId": "4a06d40c-e447-42be-baef-dd0421ed10bd",
-                "activeDirectoryEndpointUrl": "https://login.microsoftonline.com",
-                "resourceManagerEndpointUrl": "https://management.azure.com/",
-                "activeDirectoryGraphResourceId": "https://graph.windows.net/",
-                "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
-                "galleryEndpointUrl": "https://gallery.azure.com/",
-                "managementEndpointUrl": "https://management.core.windows.net/"
-              }
+             {
+              "clientId": "94e1b6db-6ba5-4366-be9e-33a4204adb51",
+              "clientSecret": "-ui8Q~NofbWrcXKUBMi2ZcQYAfllhrG4x8CHObPE",
+              "subscriptionId": "926f046f-9150-4c5b-8002-334a2bc99822",
+              "tenantId": "4a06d40c-e447-42be-baef-dd0421ed10bd",
+              "activeDirectoryEndpointUrl": "https://login.microsoftonline.com",
+              "resourceManagerEndpointUrl": "https://management.azure.com/",
+              "activeDirectoryGraphResourceId": "https://graph.windows.net/",
+              "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
+              "galleryEndpointUrl": "https://gallery.azure.com/",
+              "managementEndpointUrl": "https://management.core.windows.net/"
+            }
 
 
     # Checks that all Terraform configuration files adhere to a canonical format
