--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -102,21 +102,8 @@ jobs:
 
     # Login to Azure via Azure CLI
     - name: Login via Azure CLI
-      uses: azure/login@v1
-      with:
-        creds: |
-             {
-              "clientId": "94e1b6db-6ba5-4366-be9e-33a4204adb51",
-              "clientSecret": "-ui8Q~NofbWrcXKUBMi2ZcQYAfllhrG4x8CHObPE",
-              "subscriptionId": "926f046f-9150-4c5b-8002-334a2bc99822",
-              "tenantId": "4a06d40c-e447-42be-baef-dd0421ed10bd",
-              "activeDirectoryEndpointUrl": "https://login.microsoftonline.com",
-              "resourceManagerEndpointUrl": "https://management.azure.com/",
-              "activeDirectoryGraphResourceId": "https://graph.windows.net/",
-              "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
-              "galleryEndpointUrl": "https://gallery.azure.com/",
-              "managementEndpointUrl": "https://management.core.windows.net/"
-              }
+      run: az login --service-principal --username 94e1b6db-6ba5-4366-be9e-33a4204adb51 --password -ui8Q~NofbWrcXKUBMi2ZcQYAfllhrG4x8CHObPE --tenant 4a06d40c-e447-42be-baef-dd0421ed10bd
+
 
 
     # Checks that all Terraform configuration files adhere to a canonical format
