--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,10 +69,10 @@ permissions:
   contents: read
 
 env:
-      ARM_CLIENT_ID: "94e1b6db-6ba5-4366-be9e-33a4204adb51"
-      ARM_CLIENT_SECRET: "-ui8Q~NofbWrcXKUBMi2ZcQYAfllhrG4x8CHObPE"
-      ARM_SUBSCRIPTION_ID: "926f046f-9150-4c5b-8002-334a2bc99822"
-      ARM_TENANT_ID: "4a06d40c-e447-42be-baef-dd0421ed10bd"
+  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+  ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
 jobs:
   terraform:
@@ -102,7 +102,7 @@ jobs:
 
     # Login to Azure via Azure CLI
     - name: Login via Azure CLI
-      run: az login --service-principal --username 94e1b6db-6ba5-4366-be9e-33a4204adb51 --password -ui8Q~NofbWrcXKUBMi2ZcQYAfllhrG4x8CHObPE --tenant 4a06d40c-e447-42be-baef-dd0421ed10bd
+      run: az login --service-principal --username ${{ secrets.AZURE_CLIENT_ID }} --password ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
 
 
 
