--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -102,7 +102,7 @@ jobs:
 
     # Login to Azure via Azure CLI
     - name: Login via Azure CLI
-      run: az login --service-principal --username ${{ secrets.AZURE_CLIENT_ID }} --password ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+      run: az login --service-principal --username ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
 
 
 
