--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -103,8 +103,18 @@ jobs:
     # Login to Azure via Azure CLI
     - name: Login via Azure CLI
       uses: azure/login@v1 
-      with: 
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+    - name: Azure CLI script
+      uses: azure/CLI@v1
+      with:
+        azcliversion: latest
+        inlineScript: |
+          az account show
+          az group list
 
 
     # Checks that all Terraform configuration files adhere to a canonical format
